--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1147,15 +1147,16 @@ span.text-red {
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  margin: 4em 2rem 2rem;
+  margin: 2rem 2rem;
 }
+/* test */
 .app__footer-cards {
   width: 60%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  margin: 4em 2rem 2rem;
+  margin: 2rem 2rem;
 }
 
 .app__footer-card {
@@ -1165,7 +1166,7 @@ span.text-red {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  margin: 1rem 0;
+  margin-bottom: 1rem;
   padding: 1rem;
   border-radius: 10px;
   cursor: pointer;
